# HW3

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: logging_config.json  rate_limits.json  setup.json
docs/: COURSE_ALIGNMENT.md  PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_crewai_pipeline.md  PRD_latex_generation.md  PROMPTS.md  QUALITY_AND_EXTENSION.md  TODO.md
latex/: build.sh  colophon.tex  cover.tex  main.tex  main_generated.tex  preamble.tex  references.bib  theme.tex
latex/chapters/: 01-intro.tex  02-idea.tex  03-lean.tex  04-pmf.tex  05-team.tex  06-economics.tex  06b-growth.tex  06c-metrics.tex  07-pitfalls.tex  08-summary.tex
latex/elements/: economics-block.tex  intro-figure.tex  lean-diagram.tex  pitfalls-diagram.tex
notebooks/: results_analysis.ipynb
results/: build_transcript.txt  cost_scaling.csv  crew_output_1780408721.json  crew_output_1781020291.json  crew_output_1781023080.json  crew_output_1781033299.json  model_cost_comparison.csv  test_coverage_report.txt
scripts/: run_crew.py
src/startup_book/: __init__.py  constants.py  main.py
src/startup_book/agents/: definitions.py  tasks.py
src/startup_book/sdk/: sdk.py
tests/: conftest.py
tests/integration/: test_build_pipeline.py
tests/unit/: test_audit_service.py  test_clock.py  test_compile_service.py  test_config.py  test_crew_service.py  test_errors.py  test_figure_service.py  test_gatekeeper.py  test_latex_service.py  test_latex_text.py  test_logging_setup.py  test_models.py  test_redaction.py  test_sdk.py  test_version.py
(+17 files in other folders)
