[project]
name = "startup-book"
version = "1.30"
description = "CrewAI multi-agent system that writes and typesets a Hebrew/English startup mini-book via LuaLaTeX."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "yosefshanaa" }]
keywords = ["crewai", "agents", "latex", "lualatex", "rtl", "book-generation"]
dependencies = [
    "crewai>=0.86.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pypdf>=4.0.0",
]

[project.scripts]
startup-book = "startup_book.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

# --- Linting (submission guidelines §7.1) -----------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# --- Coverage (submission guidelines §6.2) ----------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["src/startup_book/main.py", "*/tests/*", "src/**/gui/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

# --- Pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=startup_book --cov-report=term-missing"
